# autodiff

./: CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  README.md
cmake/: kinds.cmake  kinds.f90
src/: CMakeLists.txt
src/autodiff/: __init__.F90  cat.inc  check.inc  cmplx.inc  cmplx2.inc  conv.inc  decl.inc  decl_k.inc  def.inc  derivs.inc  generic.inc  id.inc  iface.inc  iface_c.inc  iface_irc.inc  iface_r.inc  iface_rc.inc  ifaces.inc  init.inc  interface.inc  k_kinds.inc  kinds.inc  mod_proc_decl.inc  mod_procs_decl.inc  p_kinds.inc  proc.inc  procs.inc  subtypes.inc  type-kinds.inc  type.inc  types.inc
src/inc/: decl.inc  decls.inc  def.inc  defs.inc  id.inc  proc.inc
tests/: CMakeLists.txt  test_constructors.F90  test_operators.F90
tests/unittest/: __init__.F90  assert.inc  dims.inc  iface.inc  kinds.inc  to_character.inc  types.inc
